Python exercise 2 completed

--- a/python_exercises/Execrcise - Day1.ipynb
+++ b/python_exercises/Execrcise - Day1.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,10 +339,7 @@
    "source": [
     "dict_val={'physics': 80, 'math': 90, 'chemistry': 86}\n",
     "dict_key=dict_val.keys()\n",
-    "#print(key_list)\n",
-    "#first_key=list[0]\n",
-    "#key_list2=list(dict_key)\n",
-    "#print(\"Key List2:\",key_list2)\n",
+    "key_list=list(dict_key)\n",
     "print(\"The dictionary is:\",dict_val)\n",
     "print(\"The key element accesed by index:\",key_list[0])"
    ]
