--- a/Hackathon/HackathonSolution1.ipynb
+++ b/Hackathon/HackathonSolution1.ipynb
@@ -458,6 +458,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average salary by Company and City\n",
+      "                                             Salary\n",
+      "Company                   Place                    \n",
+      "CTS                       Calcutta      3771.419355\n",
+      "                          Chennai       4685.155914\n",
+      "                          Cochin        2903.366935\n",
+      "                          Delhi         9142.000000\n",
+      "                          Hyderabad     5448.822581\n",
+      "                          Mumbai        4268.541219\n",
+      "                          Noida         1089.000000\n",
+      "                          Podicherry    5659.000000\n",
+      "                          Pune          7156.233871\n",
+      "                          Unknow Place  8157.489247\n",
+      "Congnizant                Mumbai        2934.000000\n",
+      "                          Noida         2934.000000\n",
+      "Infosys                   Bhopal        7000.000000\n",
+      "                          Calcutta      5626.769795\n",
+      "                          Chennai       4756.666667\n",
+      "                          Cochin        6578.600000\n",
+      "                          Delhi         3760.744624\n",
+      "                          Hyderabad     4072.666667\n",
+      "                          Mumbai        4993.085044\n",
+      "                          Noida         5098.000000\n",
+      "                          Podicherry    3030.000000\n",
+      "                          Unknow Place  6734.000000\n",
+      "Infosys Pvt Lmt           Chennai       8202.000000\n",
+      "                          Mumbai        8202.000000\n",
+      "TCS                       Calcutta      5418.266749\n",
+      "                          Chennai       6288.822581\n",
+      "                          Cochin        5360.500000\n",
+      "                          Delhi         4338.000000\n",
+      "                          Hyderabad     3045.000000\n",
+      "                          Mumbai        5219.071960\n",
+      "                          Nagpur        8000.000000\n",
+      "                          Noida         5089.366935\n",
+      "                          Unknow Place  6584.666667\n",
+      "Tata Consultancy Services Mumbai        8345.000000\n",
+      "                          Unknow Place  8345.000000\n",
+      "Unknow Company            Calcutta      4383.233871\n",
+      "                          Chennai       8943.000000\n",
+      "                          Delhi         5312.467742\n",
+      "                          Hyderabad     5312.467742\n",
+      "                          Mumbai        3000.000000\n",
+      "                          Noida         6543.000000\n",
+      "                          Unknow Place  8943.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Average salary by Company and City\n",
+    "print(\"Average salary by Company and City\")\n",
+    "avgsaldf=comdf.groupby(['Company','Place']).agg({'Salary':np.mean})\n",
+    "print(avgsaldf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of male and female salary by Company and City\n",
+      "Male employee\n",
+      "Company    33\n",
+      "dtype: int64\n",
+      "FeMale employee\n",
+      "Company    115\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of male and female employee\n",
+    "print(\"Number of male and female salary by Company and City\")\n",
+    "maledf = comdf[comdf[\"Gender\"] == 1]\n",
+    "print(\"Male employee\")\n",
+    "print(maledf.count()[['Company']]) \n",
+    "\n",
+    "femaledf = comdf[comdf[\"Gender\"] == 0]\n",
+    "print(\"FeMale employee\")\n",
+    "print(femaledf.count()[['Company']]) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
